<resources>
    <string name="app_name">LoRa</string>
    <string name="login_app_name">lora报警APP</string>
    <string name="login_app_desc">您的掌上消防报警助手</string>
    <string name="input_account">请输入账号</string>
    <string name="input_phone_number">请输入手机号</string>
    <string name="input_verify_code">请输入验证码</string>
    <string name="input_password">请输入密码</string>
    <string name="use_sms_login">用短信验证码登录</string>
    <string name="use_password_login">用账号密码登录</string>
    <string name="fire_alarm">火灾报警</string>
    <string name="trouble_alarm">故障报警</string>
    <string name="equipment_normal">设备正常</string>
</resources>
